fix: ensure word wrap for content section

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -75,6 +75,8 @@ code, pre {
 }
 
 section.content {
+	overflow-wrap: break-word;
+
 	img {
 		width: 100%;
 	}
